--- a/install
+++ b/install
@@ -5,10 +5,15 @@ files_len=${#files[*]}
 
 for ((i=0; i<files_len; i++)); do
 	if [[ -e "$HOME/${files[i]}" ]]; then
-		rm -ri "$HOME/${files[i]}"
+		while true; do
+			read -p "Do you wish to remove $HOME/${files[i]}? "
+			case $REPLY in
+				[Yy]* ) rm -rf "$HOME/${files[i]}"; break;;
+				[Nn]* ) continue 2;;
+				* ) echo "Please answer yes or no.";;
+			esac
+		done
 	fi
-	echo "Creating ${files[i]}..."
+	echo "ln -s $PWD/${files[i]} $HOME/${files[i]}"
 	ln -s "$PWD/${files[i]}" "$HOME/${files[i]}"
 done
-
-echo 'Done.'
