--- a/install
+++ b/install
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-files=(.vim .vimrc .gitconfig .zshrc .irssi .ssh/config .tmux.conf)
+files=(.vim .vimrc .gitconfig .zshrc .irssi .ssh/config .ssh/authorized_keys .tmux.conf)
 files_len=${#files[*]}
 
 # For each file in the file list
