--- a/install
+++ b/install
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-files=(.vim .vimrc .gitconfig .zshrc .irssi .ssh/config .ssh/authorized_keys .tmux.conf)
+files=(.gitconfig .zshrc .ssh/config .ssh/authorized_keys .tmux.conf)
 files_len=${#files[*]}
 
 # For each file in the file list
@@ -25,12 +25,16 @@ for ((i=0; i<files_len; i++)); do
 	ln -s "$PWD/${files[i]}" "$HOME/${files[i]}"
 done
 
+DEBIAN_PACKAGES=git tmux zsh
+PACMAN_PACKAGES=git tmux zsh
+
 # Install required software
-if [[ -e '/usr/bin/apt-get' ]]; then
-	sudo apt-get install git tmux zsh vim vim-youcompleteme exuberant-ctags
+if [[ -e '/usr/bin/apt' ]]; then
+	sudo apt update
+	sudo apt install $DEBIAN_PACKAGES
 fi
 if [[ -e '/usr/bin/pacman' ]]; then
-	sudo pacman --sync --needed git tmux zsh vim
+	sudo pacman --sync --needed $PACMAN_PACKAGES
 fi
 
 # Update shell
