--- a/install
+++ b/install
@@ -5,8 +5,18 @@ REPO="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 DEBIAN_PACKAGES="git tmux zsh"
 PACMAN_PACKAGES="git tmux zsh"
 
+PLATFORM="linux32"
+if [[ "$(uname -m)" == *"64" ]]; then
+	PLATFORM="linux64"
+fi
+
 files=(.gitconfig .zshrc .ssh/config .ssh/authorized_keys .tmux.conf)
 files_len=${#files[*]}
+
+function github-latest-tag {
+    redirection=`curl https://github.com/$1/releases/latest -s -L -I -o /dev/null -w '%{url_effective}'`
+    echo "${redirection##*v}"
+}
 
 # Make common directories
 mkdir -p $HOME/bin $HOME/pkg $HOME/src $HOME/tmp
@@ -33,7 +43,7 @@ for ((i=0; i<files_len; i++)); do
 	ln -s "$REPO/${files[i]}" "$HOME/${files[i]}"
 done
 
-# Install required software
+# Install package software
 if [[ -e '/usr/bin/apt' ]]; then
 	echo "$ sudo apt install $DEBIAN_PACKAGES"
 	sudo apt install $DEBIAN_PACKAGES
@@ -42,6 +52,15 @@ if [[ -e '/usr/bin/pacman' ]]; then
 	echo "$ sudo pacman --sync --needed $PACMAN_PACKAGES"
 	sudo pacman --sync --needed $PACMAN_PACKAGES
 fi
+
+# -- Micro -- #
+echo "Installing micro..."
+MICRO_RELEASE=$(github-latest-tag zyedidia/micro)
+MICRO_TARBALL="https://github.com/zyedidia/micro/releases/download/v${MICRO_RELEASE}/micro-${MICRO_RELEASE}-${PLATFORM}.tar.gz"
+curl -L "$MICRO_TARBALL" > "$REPO/micro.tar.gz"
+tar -xvzf "$REPO/micro.tar.gz" "micro-${MICRO_RELEASE}/micro"
+mv "micro-${MICRO_RELEASE}/micro" "$HOME/bin/micro"
+rm -rf "$REPO/micro.tar.gz" "micro-${MICRO_RELEASE}"
 
 # Update shell
 echo "$ chsh -s /bin/zsh"
